Fixed account forms on small screens

--- a/src/stylus/global.styl
+++ b/src/stylus/global.styl
@@ -3,3 +3,9 @@
 
 h1, h2, h3, h4, h5, h6
   font-family "Oleo Script" serif
+
+.form-group
+  label
+    text-align right
+  .btn + .btn
+    margin-left 8px
